fixed background on mobile

--- a/source/assets/styles/styles.scss
+++ b/source/assets/styles/styles.scss
@@ -475,8 +475,7 @@ body {
 		@media screen and (max-width:45em) {
 			width:100%;
 			height:100vh;
-			background:rgba(255, 255, 255, 0.8);
-			backdrop-filter: blur(6px);
+			background:rgb(255, 255, 255);
 		}
 
 		&.show {
